--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 build/
+
+# Dependency directories
+node_modules/
+jspm_packages
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
