--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "aws-sdk": "2.3.14",
     "mysql": "2.10.2",
-    "raven": "^0.12.1",
+    "rollbar": "^0.6.2",
     "sequelize": "3.20.0"
   }
 }
